--- a/package.json
+++ b/package.json
@@ -6,13 +6,19 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "formik": "^2.4.5",
     "http-server": "^14.1.1",
     "prop-types": "^15.8.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
+    "react-helmet-async": "^1.3.0",
+    "react-router-dom": "^6.1.0",
     "react-scripts": "^5.0.1",
+    "react-transition-group": "^4.4.5",
     "web-vitals": "^1.0.1",
-    "webpack": "^5.88.0"
+    "webpack": "^5.88.0",
+    "yup": "^1.2.0"
   },
   "scripts": {
     "start": "react-scripts --openssl-legacy-provider start",
@@ -39,6 +45,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "sass": "^1.63.4"
   }
 }
